[package]
name        = "mxhkd"
description = "Modal X Hotkey Daemon"
version     = "0.0.3"
authors     = ["Carlos D'Agostino <m@cdagostino.io>", "Robert McMichael <none@none.com>"]
edition     = "2018"
build       = "build.rs"

[dependencies]
toml    = "0.4"
clap    = "2.32"
regex   = "1.1"
bimap   = "0.3"

[dependencies.xcb]
version  = "0.8"
features = ["xlib_xcb"]

[dependencies.serde]
version  = "1.0"
features = ["derive"]
